Modified Resume and fixed Resume Mail Icon bug when resizing page

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
       <!--Resume Mail Animation -->
       <div class="btn-toolbar" id = "center">
-        <a class="btn text-white" href="files/Resume_S_Tehranchi.pdf" target="_blank" download="Resume_S_Tehranchi">
+        <a class="btn text-white" href="files/Resume_T_Tehranchi.pdf" target="_blank" download="Resume_Tehranchi">
           <span class="fa"></span> 
 
           <div class="letter-image">
@@ -100,7 +100,7 @@
               </div>
               <div class="left-fold"></div>
             </div>
-            <div class="shadow">
+            <div class="shadow" >
               <div id="text2">Download Resume</div>
             </div>
           </div>
